          Release Notes for NEdit Version 5.3, February 2002


$Id: ReleaseNotes,v 1.14 2002/03/11 18:17:03 edg Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.


New Features in 5.3

  This is mainly a bug fix release. The list of new features is therefore 
  limited:

  - The built-in Help system was revamped. Most notably, a hyperlink
    mechanism was added for following cross-references.

  - Enhanced Exuberant ctags support (SF #491109).

  - Line numbers are available in shell commands (SF #434451).

  - Goto Line also accepts column numbers (SF #403435).
  
  - Automatic line-feed termination when saving is now optional (SF #503073).

  - A customizable window title (SF #477875/#519092).


Bugs Fixed in 5.3

  - Background popup menu could lock up X-server when used with any of 
    the lock keys on.

  - Very wide windows when starting NEdit under fvwm (SF #496526).

  - Workaround for illegal key bindings installed by other Motif applications,
    causing PageUp/PageDown and arrow keys to stop responding in NEdit
    (SF #493421/#525903). This is not an NEdit bug, it just looks like one.
    
  - Fix for PageUp/PageDown keys not responding (SF #508961).
  
  - Crash when running X on 2nd screen (SF #478234, #500353).

  - Line number display updating in continous wrap mode (SF #516920).

  - Performance problem with X Resources highlight patterns (SF #481290).

  - Menu fonts showing up as blocks (SF #434383)
