@@ -951,6 +951,11 @@ character of the pair.  NEdit will match {, (, [, &#60;, ", ', `, /, and \.
 Holding the Shift key while typing the accelerator key (Shift+Ctrl+M, by
 default), will select all of the text between the matching characters.
 <P>
+When syntax highlighting is enabled, the matching routines can optionally
+make use of the syntax information for improved accuracy. In that case,
+a brace inside a highlighted string will not match a brace inside a comment,
+for instance.
+<P>
 <H3>Opening Included Files</H3>
 <P>
 The Open Selected command in the File menu understands the C preprocessor's
@@ -2435,6 +2440,11 @@ Contains the current preference for showing matching pairs,
 such as "[]" and "{}" pairs. Can be "off", "delimiter", or "range".
 <P>
 <PRE>
+<B>$match_syntax_based</B>
+</PRE>
+Whether pair matching should use syntax information, if available.
+<P>
+<PRE>
 <B>$statistics_line</B>
 </PRE>
 Has a value of 1 if the statistics line is shown, otherwise 0.
@@ -3009,6 +3019,11 @@ If no parameters are supplied the option is toggled.
 <B>set_show_matching( "off" | "delimiter" | "range" )</B>
 </PRE>
 Set show matching (...) mode for the current window.
+<P>
+<PRE>
+<B>set_match_syntax_based( [0 | 1] )</B>
+</PRE>
+Set whether matching should be syntax based for the current window.
 <P>
 <PRE>
 <B>set_statistics_line( [0 | 1] )</B>
@@ -3633,6 +3648,10 @@ range between them, when one of these characters is typed, or when the
 insertion cursor is positioned after it. Delimiter only highlights the
 matching delimiter, while Range highlights the whole range of text between
 the matching delimiters.
+<P>
+Optionally, the matching can make use of syntax information if syntax
+highlighting is enabled. Alternatively, the matching is purely character
+based. In general, syntax based matching results in fewer false matches.
 <P>
 <PRE>
 <B>Overtype</B>
@@ -4964,8 +4983,8 @@ dialog (or use the Unix unix2dos command outside of NEdit).
 <H2> Version </H2>
 <P>
 <PRE>
-NEdit release of Mar  7, 2002
-Mar 7, 2002
+NEdit release of Mar 11, 2002
+Mar 11, 2002
 </PRE>
 <P>
 NEdit was written by Mark Edel, Joy Kyriakopulos, Christopher Conrad,
